--- a/src/app/css/utilities/visually-hidden.css
+++ b/src/app/css/utilities/visually-hidden.css
@@ -1,3 +1,5 @@
+/* Currently disabled */
+/* CSS class to toggle visibility for accessibility purposes */
 .visually_hidden {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
