--- a/src/app/css/styles.css
+++ b/src/app/css/styles.css
@@ -2,19 +2,25 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 4em 2em;
+    overflow-x: hidden;
 }
 
 .main__article {
+    display: grid;
     grid-column: 1 / span 2;
 }
 
 .main__article article {
     display: grid;
     row-gap: 2em;
+    grid-column: 1 / 3;
+    grid-template-columns: subgrid;
+    grid-template-rows: repeat(2, auto);
 }
 
 .main__article__text_content {
     display: grid;
+    grid-row: 2;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 3em;
 }
@@ -90,7 +96,7 @@
     }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1067px) {
     .main__article,
     .news__aside_container {
         grid-column: 1 / span 3;
@@ -98,6 +104,36 @@
 
     .news__aside_container {
         grid-row: 2;
+    }
+
+    .secondary__articles {
+        grid-template-columns: 95%;
+        gap: 1.5em;
+        margin-bottom: 3em;
+    }
+
+    .secondary__articles article:first-child {
+        grid-row: 1 / 2;
+        grid-column: 1 / 2;
+    }
+
+    .secondary__articles article:nth-child(2) {
+        grid-row: 2 / 3;
+        grid-column: 1 / 2;
+    }
+
+    .secondary__articles article:last-child {
+        grid-row: 3 / 4;
+        grid-column: 1 / 2;
+    }
+}
+
+@media (max-width: 767px) {
+    .main {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .main__article article {
+        grid-column: 1 / 2;
     }
 }
 
@@ -114,25 +150,5 @@
     .main__article__text_content {
         grid-template-columns: subgrid;
         gap: 1em;
-    }
-
-    .secondary__articles {
-        grid-template-columns: 95%;
-        gap: 1.5em;
-    }
-
-    .secondary__articles article:first-child {
-        grid-row: 1 / 2;
-        grid-column: 1 / 2;
-    }
-
-    .secondary__articles article:nth-child(2) {
-        grid-row: 2 / 3;
-        grid-column: 1 / 2;
-    }
-
-    .secondary__articles article:last-child {
-        grid-row: 3 / 4;
-        grid-column: 1 / 2;
     }
 }
